tests/fail/dize-dizey.kip
doğruya dize diyelim.
yanlışa dizey diyelim.

dizeyi yaz.
